fix for progress bar but zoom works

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,11 +65,14 @@
     </div>
     <br /><br />
 
-    <div class="container progress">
-      <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-        Calculating...
+    <div class="container">
+      <div class="progress">
+        <div id="progressBar" name="progressBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+          Calculating...
+        </div>
       </div>
     </div>
+
 
 <!--
     <div>
